Fixed spacing issues.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 20px);
+  min-height: calc(100vh - 26px);
   flex-direction: column;
 }
 
@@ -24,7 +24,7 @@ body {
 img {
   width: 250px;
   height: 250px;
-  margin-bottom: -10pt;
+  margin-bottom: 0;
 }
 
 h1 {
@@ -47,7 +47,7 @@ h1 {
   text-align: center;
   font-size: 14px;
   color: #BFBFBF;
-  position: fixed;
+  position: absolute;
   bottom: 5pt;
   width: 100%;
 }
@@ -65,7 +65,7 @@ button, a {
   font-style: normal;
   font-variation-settings: "wdth" 100;
   font-size: 15px;
-  margin: 0 10px 10px;
+  margin: 2px 10px 10px;
   padding: 8px 22px;
   border: 2px solid;
   border-radius: 8px;
